迁移并初步验证网关、用户模块

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,10 @@
     <modules>
         <module>qoj-question</module>
         <module>qoj-question/qoj-question-serv</module>
+        <module>qoj-gateway</module>
+        <module>qoj-common</module>
+        <module>qoj-user</module>
+        <module>qpj-test</module>
     </modules>
 
 
