--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
         <module>qoj-gateway</module>
         <module>qoj-common</module>
         <module>qoj-user</module>
-        <module>qpj-test</module>
     </modules>
 
 
@@ -151,12 +150,6 @@
                 <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
             </dependency>
-            <!-- MyBatis 生成器 -->
-            <dependency>
-                <groupId>org.mybatis.generator</groupId>
-                <artifactId>mybatis-generator-core</artifactId>
-                <version>${mybatis-generator.version}</version>
-            </dependency>
             <!--Mysql数据库驱动-->
             <dependency>
                 <groupId>mysql</groupId>
@@ -276,7 +269,9 @@
                                         <descriptorRef>artifact</descriptorRef>
                                     </assembly>
                                     <!--定义容器启动命令-->
-                                    <entryPoint>["java", "-jar","-Dspring.profiles.active=prod","/${project.build.finalName}.jar"]</entryPoint>
+                                    <entryPoint>["java",
+                                        "-jar","-Dspring.profiles.active=prod","/${project.build.finalName}.jar"]
+                                    </entryPoint>
                                     <!--定义维护者-->
                                     <maintainer>macrozheng</maintainer>
                                 </build>
