迁移并验证讨论服务，包括题解和评论

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>qoj-judge</module>
         <module>qoj-codeSandBox</module>
         <module>qoj-eventStream</module>
+        <module>qoj-discussion</module>
     </modules>
 
 
