--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,9 @@
         <pagehelper.version>6.1.0</pagehelper.version>
         <druid.version>1.2.9</druid.version>
         <hutool.version>5.8.16</hutool.version>
+        <mybatis-generator.version>1.4.2</mybatis-generator.version>
+        <mybatis.version>3.5.14</mybatis.version>
+        <mybatis-spring-boot-starter.version>3.0.3</mybatis-spring-boot-starter.version>
         <mysql-connector.version>8.0.29</mysql-connector.version>
         <spring-data-commons.version>3.2.2</spring-data-commons.version>
         <aliyun-oss.version>2.5.0</aliyun-oss.version>
@@ -55,9 +58,6 @@
         <sa-token.version>1.37.0</sa-token.version>
         <mall-common.version>1.0-SNAPSHOT</mall-common.version>
         <mall-mbg.version>1.0-SNAPSHOT</mall-mbg.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
