实现单次运行代码的debug接口 优化ai问答

--- a/qoj-question/qoj-question-serv/pom.xml
+++ b/qoj-question/qoj-question-serv/pom.xml
@@ -100,6 +100,10 @@
 <!--            <version>3.0.3</version>-->
 <!--        </dependency>-->
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-jsqlparser-4.9</artifactId>
         </dependency>
