--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>qoj-eventStream</module>
         <module>qoj-discussion</module>
         <module>qoj-ai</module>
+        <module>qoj-document</module>
     </modules>
 
 
@@ -106,18 +107,6 @@
                 <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <!--mall通用模块-->
-            <dependency>
-                <groupId>com.macro.mall</groupId>
-                <artifactId>mall-common</artifactId>
-                <version>${mall-common.version}</version>
-            </dependency>
-            <!--mall中MBG生成模块-->
-            <dependency>
-                <groupId>com.macro.mall</groupId>
-                <artifactId>mall-mbg</artifactId>
-                <version>${mall-mbg.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
