移除冗余代码，优化项目结构

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>qoj-ai</module>
         <module>qoj-document</module>
         <module>qoj-common-api</module>
+        <module>qoj-question/qoj-question-api</module>
     </modules>
 
 
