--- a/qoj-codeSandBox/qoj-codeSandBox-serv/pom.xml
+++ b/qoj-codeSandBox/qoj-codeSandBox-serv/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.qiu.qoj</groupId>
-        <artifactId>qoj</artifactId>
+        <artifactId>qoj-codeSandBox</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
