--- a/qoj-question/qoj-question-api/pom.xml
+++ b/qoj-question/qoj-question-api/pom.xml
@@ -5,16 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.qiu.qoj</groupId>
-        <artifactId>qoj</artifactId>
+        <artifactId>qoj-question</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>qoj-codeSandBox</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>qoj-codeSandBox-api</module>
-        <module>qoj-codeSandBox-serv</module>
-    </modules>
+    <artifactId>qoj-question-api</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -22,5 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.qiu.qoj</groupId>
+            <artifactId>qoj-common-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
