--- a/qoj-eventStream/codeflow-eventStream-api/pom.xml
+++ b/qoj-eventStream/codeflow-eventStream-api/pom.xml
@@ -5,23 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.qiu.qoj</groupId>
-        <artifactId>qoj</artifactId>
+        <artifactId>qoj-eventStream</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>qoj-eventStream</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>codeflow-eventStream-api</module>
-        <module>codeflow-eventStream-serv</module>
-    </modules>
+    <artifactId>codeflow-eventStream-api</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-
 
 </project>
