chore: Update .gitignore, fix formatting issues, and enhance CardController with Anki card ID existence check
- Added .cursorrules and .vscode/** to .gitignore.
- Updated .gitignore to ignore various configuration and resource files.
- Cleaned up formatting in pom.xml and several Java files for better readability.
- Modified DocumentConstant to reduce max filename length and path depth.
- Enhanced CardController with a new endpoint to check the existence of Anki card IDs.
- Introduced AnkiCardIdsRequest DTO for handling requests related to Anki card IDs.
- Updated CardService to implement the logic for checking Anki card existence.
- Added a new method in CardRepository to find existing Anki card IDs.
- Improved error handling in S3ObjectStorageImpl for file existence checks.
- Updated UserFileServiceImpl to adjust file upload logic and preview URL expiration.
- Added unit tests for MongoDB interactions and card update logic.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea
 *.iml
 src/main/resources/application.yml
+.cursorrules
+.vscode/**
 ### Java template
 # Compiled class file
 *.class
@@ -29,6 +31,12 @@ hs_err_pid*
 replay_pid*
 
 ### Maven template
+*.yml
+*.yaml
+*.properties
+*.xml
+*.json
+pom.xml
 target/
 pom.xml.tag
 pom.xml.releaseBackup
