--- a/qoj-ai/pom.xml
+++ b/qoj-ai/pom.xml
@@ -157,7 +157,7 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
-    </dependencyManagement>00000000000000000000000000000000000000000000
+    </dependencyManagement>
 
     <repositories>
         <repository>
