完善知识图谱的功能，实现获取标签图谱功能。在API聚合层实现知识图谱接口并验证。

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>demo</module>
         <module>cardflow-framework</module>
         <module>cardflow-common-interface</module>
+        <module>cardflow-api</module>
         <!--        <module>demo</module>-->
     </modules>
 
