--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>cardflow-framework</module>
         <module>cardflow-common-interface</module>
         <module>cardflow-api</module>
+        <module>cardflow-ai-new</module>
+        <module>cardflow-ai-interface</module>
     </modules>
 
 
@@ -82,6 +84,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 <!--        &lt;!&ndash; 读取bootstrap文件 &ndash;&gt;-->
 <!--        <dependency>-->
