--- a/cardflow-card-provider/pom.xml
+++ b/cardflow-card-provider/pom.xml
@@ -18,6 +18,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.qiu.cardflow</groupId>
             <artifactId>cardflow-framework-rpc-starter</artifactId>
