--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,11 @@
 
     <dependencies>
         <!--        https://doc.xiaominfo.com/knife4j/documentation/get_start.html-->
-        <dependency>
+        <!-- <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>3.0.3</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
