--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### Custom Template
 .idea
 *.iml
-src/main/resources/application.yml
+# src/main/resources/application.yml
 .cursorrules
 .vscode/**
 ### Java template
@@ -31,7 +31,7 @@ hs_err_pid*
 replay_pid*
 
 ### Maven template
-*.yml
+# *.yml
 *.yaml
 *.properties
 *.xml
