--- a/cardflow-common-interface/pom.xml
+++ b/cardflow-common-interface/pom.xml
@@ -18,11 +18,11 @@
     </properties>
 
     <dependencies>
-        <dependency>
+        <!-- <dependency>
             <groupId>com.qiu.cardflow</groupId>
             <artifactId>cardflow-graph-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency> -->
     </dependencies>
 
 </project>
