--- a/cardflow-user/cardflow-user-serv/src/main/resources/application-prod.yml
+++ b/cardflow-user/cardflow-user-serv/src/main/resources/application-prod.yml
@@ -5,7 +5,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        namespace: ${NACOS_CARDFLOW_NAMESPACE}
+        namespace: cardflow
         password: ${NACOS_CARDFLOW_PASSWORD}
         username: ${NACOS_CARDFLOW_USERNAME}
         server-addr: ${NACOS_CARDFLOW_ADDRESS}
@@ -17,7 +17,7 @@ spring:
         # 读取配置的nacos地址
         server-addr: ${NACOS_CARDFLOW_ADDRESS}
         # 读取配置的nacos的名空间
-        namespace: ${NACOS_CARDFLOW_CONFIG_NAMESPACE}
+        namespace: cardflow-config
         password: ${NACOS_CARDFLOW_PASSWORD}
         username: ${NACOS_CARDFLOW_USERNAME}
   config:
