--- a/cardflow-ai-provider/pom.xml
+++ b/cardflow-ai-provider/pom.xml
@@ -18,6 +18,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.qiu.cardflow</groupId>
             <artifactId>cardflow-framework-rpc-starter</artifactId>
@@ -38,7 +44,7 @@
         </dependency>
         <dependency>
             <groupId>com.qiu.cardflow</groupId>
-            <artifactId>codeflow-eventStream-api</artifactId>
+            <artifactId>cardflow-eventStream-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
