--- a/cardflow-framework/cardflow-framework-web-starter/pom.xml
+++ b/cardflow-framework/cardflow-framework-web-starter/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
                 <exclusion>
                     <artifactId>log4j-to-slf4j</artifactId>
