--- a/cardflow-codeSandBox/cardflow-codeSandBox-api/pom.xml
+++ b/cardflow-codeSandBox/cardflow-codeSandBox-api/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>cardflow-common-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.qiu.cardflow</groupId>
+            <artifactId>cardflow-framework-rabbitmq-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.qiu.cardflow</groupId>
+            <artifactId>cardflow-eventStream-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
