--- a/cardflow-codeSandBox/cardflow-codeSandBox-serv/pom.xml
+++ b/cardflow-codeSandBox/cardflow-codeSandBox-serv/pom.xml
@@ -123,6 +123,12 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.qiu.cardflow</groupId>
+            <artifactId>cardflow-codeSandBox-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
