重构判题服务和debug接口的消息队列使用方式和执行流程

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>cardflow-ai-interface</module>
         <module>cardflow-card-provider</module>
         <module>cardflow-card-interface</module>
+        <module>cardflow-judge-interface</module>
     </modules>
 
 
