--- a/cardflow-codeSandBox/cardflow-codeSandBox-serv/pom.xml
+++ b/cardflow-codeSandBox/cardflow-codeSandBox-serv/pom.xml
@@ -81,6 +81,11 @@
             <version>2.9.1</version>
         </dependency>
         <dependency>
+            <groupId>com.qiu.cardflow</groupId>
+            <artifactId>cardflow-eventStream-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
