--- a/cardflow-judge/pom.xml
+++ b/cardflow-judge/pom.xml
@@ -113,6 +113,12 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.qiu.cardflow</groupId>
+            <artifactId>cardflow-judge-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
