--- a/cardflow-question/cardflow-question-serv/pom.xml
+++ b/cardflow-question/cardflow-question-serv/pom.xml
@@ -25,6 +25,11 @@
         </dependency>
         <dependency>
             <groupId>com.qiu.cardflow</groupId>
+            <artifactId>cardflow-judge-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.qiu.cardflow</groupId>
             <artifactId>cardflow-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
