--- a/cardflow-eventStream/cardflow-eventStream-serv/pom.xml
+++ b/cardflow-eventStream/cardflow-eventStream-serv/pom.xml
@@ -46,6 +46,18 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.qiu.cardflow</groupId>
+            <artifactId>cardflow-eventStream-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.qiu.cardflow</groupId>
+            <artifactId>cardflow-framework-redis-starter</artifactId>
+            <version>1-0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
