--- a/cardflow-ai-provider/pom.xml
+++ b/cardflow-ai-provider/pom.xml
@@ -23,7 +23,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.qiu.cardflow</groupId>
             <artifactId>cardflow-framework-rpc-starter</artifactId>
